--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -1,3 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url('./blocks/_main.scss');
 @import url('./blocks/_ui.scss');
+@import url('./blocks/_grid.scss');
