feat: add filters and news widgets

--- a/src/app/styles/blocks/_ui.scss
+++ b/src/app/styles/blocks/_ui.scss
@@ -4,3 +4,15 @@ a {
   line-height: 36px;
   font-size: var(--link-size);
 }
+
+.input {
+  border: none;
+  outline: none;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+}
